<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_general"
        android:title="@string/bottom_navigation_general"
        android:icon="@drawable/ic_format_list_bulleted_24px" />
    <item
        android:id="@+id/menu_fall_asleep"
        android:title="@string/bottom_navigation_fall_asleep"
        android:icon="@drawable/ic_music_off_24px" />

    <item
        android:id="@+id/menu_sleep"
        android:title="@string/bottom_navigation_sleep"
        android:icon="@drawable/ic_timer_24px" />
    <item
        android:id="@+id/menu_wake_up"
        android:title="@string/bottom_navigation_wake_up"
        android:icon="@drawable/ic_alarm_24px" />
    <item
        android:id="@+id/menu_snooze"
        android:title="@string/bottom_navigation_snooze"
        android:icon="@drawable/ic_snooze_24px" />

</menu>