<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.PreferenceActivity">

    <group android:id="@+id/group_alarm">

        <item android:id="@+id/menu_alarm"
            android:title="@string/alarm"
            android:icon="@drawable/ic_menu_alarm"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/menu_snooze"
            android:title="@string/snooze"
            android:icon="@drawable/ic_menu_snooze"
            app:showAsAction="ifRoom"/>

    </group>

    <item android:id="@+id/menu_dismiss"
        android:title="@string/dismiss"
        android:icon="@drawable/ic_menu_dismiss"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_about"
        android:title="@string/menu_title_about"/>

</menu>