<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/main_title" />

    <LinearLayout
        android:id="@+id/alarm_tiles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <linusfessler.alarmtiles.views.AlarmTile
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:enabled="true"
            app:name="@string/sleep_timer"
            app:icon="@drawable/ic_music_off_24px" />

        <linusfessler.alarmtiles.views.AlarmTile
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:enabled="false"
            app:name="@string/alarm"
            app:icon="@drawable/ic_alarm_24px" />

        <linusfessler.alarmtiles.views.AlarmTile
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:name="@string/timer"
            app:icon="@drawable/ic_timer_24px" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
