<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:columnCount="3"
        android:rowCount="2">

        <linusfessler.alarmtiles.views.QuickSettingsTile
            android:id="@+id/sleep_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_columnWeight="1"
            android:layout_marginBottom="24dp"
            app:enabled="false"
            app:icon="@drawable/ic_music_off_24px"
            app:label="@string/sleep_timer" />

        <linusfessler.alarmtiles.views.QuickSettingsTile
            android:id="@+id/alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_columnWeight="1"
            android:layout_marginBottom="24dp"
            app:enabled="false"
            app:icon="@drawable/ic_alarm_24px"
            app:label="@string/alarm" />

        <linusfessler.alarmtiles.views.QuickSettingsTile
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_columnWeight="1"
            android:layout_marginBottom="24dp"
            app:enabled="false"
            app:icon="@drawable/ic_hourglass_empty_24px"
            app:label="@string/timer" />

        <linusfessler.alarmtiles.views.QuickSettingsTile
            android:id="@+id/stopwatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_columnWeight="1"
            android:layout_marginBottom="24dp"
            app:enabled="false"
            app:icon="@drawable/ic_timer_24px"
            app:label="@string/stopwatch" />

    </GridLayout>

</layout>