<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_alarm_24px"
            android:text="@string/alarm" />

        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_timer_24px"
            android:text="@string/timer" />

        <com.google.android.material.tabs.TabItem
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_snooze_24px"
            android:text="@string/snooze" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tab_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_alarm_24px"
        android:tint="@color/white" />

</RelativeLayout>