<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/sleep_timer" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/fragment_padding">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep_timer_config_description" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fragment_padding" />

                <linusfessler.alarmtiles.views.QuickSettingsTile
                    android:id="@+id/sleep_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:enabled="false"
                    app:icon="@drawable/ic_music_off_24px"
                    app:label="@string/sleep_timer" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fragment_padding" />

                <linusfessler.alarmtiles.views.TimeInput
                    android:id="@+id/duration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hint="@string/sleep_timer_config_duration" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fragment_padding" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/decreasing_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep_timer_config_decrease_volume" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>